# NetworkAdapterTweaker

./: .gitignore  CMakeLists.txt  adapter.py  build.bat  build_exe.bat  guard.py  main.pyw  run.bat
src/: adapter.cpp  adapter.h  gui.cpp  gui.h  main.cpp
